fixed license fees layout on mobile

--- a/source/sass/mobile.scss
+++ b/source/sass/mobile.scss
@@ -54,7 +54,7 @@
   }
 
   .scroll-wrapper {
-    max-width: 375px;
+    max-width: calc(100vw - 25px);
     overflow: auto;
   }
 
